2016-09-01 eric wolf  <coyocanid@gmail.com>
        * Version 1.16 : logins are case insensitive now
        * Version 1.14 : correctly handle undefined values being passed in
	*                simplified update protocol
	* Version 1.13 : dumb javascript error
	* Version 1.12 : fixed nit in UUID call
	*  on the javascript side, yote calls unroll the server results into arguments for the callback functions.
	*  fixed a bug in yote.js where objects were not being reconsituted with their correct methods.
	* Version 1.11
	* added onLogin method for accounts
	* added protocol for file uploads
2016-06-06  eric wolf  <wolf@talisman>
	* CHANGELOG: 1.08 : All errors return as JSON. Those not specific just have the message 'ERROR'

2016-06-05  eric wolf  <wolf@talisman>
	* CHANGELOG: 1.07 : added _onLogin method to login object that is called when the login succeeds.

	
2016-05-15  eric wolf  <wolf@talisman>

	* CHANGELOG: Version 1.06 API change. Changes how things are passed back to client. Previously, only things directly passed back were passed back. Now it passes back all the things in the return list plus all the things those directly reference.
	* change was is passed by to client by default
	* passes all in return list, plus all those directly reference
	* assumes that some encapsulation will be done with private members


	1.04 - added a cgi/modperl flavor. The API between client and server was updated for this.
	Updating both yote.js and Yote::Server ( as part of a normal upgrade ) will make this
	transparent

